--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!doctype html>
 <html lang="uz">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/ico.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>birkuntalaba</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/ico.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+  <!-- SEO Optimization: Default Title -->
+  <title>Bir Kun Talaba - O'zingizga mos universitetni toping</title>
+
+  <!-- SEO Optimization: Meta Tags -->
+  <meta name="description" content="Bir Kun Talaba - bu qiziqarli test orqali O'zbekistondagi universitetlar orasidan sizga eng mosini topishga yordam beradigan platforma. Kelajakdagi kasbingizni biz bilan kashf eting." />
+  <meta name="keywords" content="universitet, talaba, O'zbekiston, ta'lim, kasb tanlash, abituriyent, test, oliygoh" />
+  <meta name="author" content="Bir Kun Talaba" />
+  <link rel="canonical" href="https://birkuntalaba.uz" /> <!-- Replace with your actual domain -->
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://birkuntalaba.uz/"> <!-- Replace with your actual domain -->
+  <meta property="og:title" content="Bir Kun Talaba - O'zingizga mos universitetni toping">
+  <meta property="og:description" content="Qiziqarli testimizni yeching va o'zingizga mos keladigan universitet va yo'nalishni aniqlang.">
+  <meta property="og:image" content="https://birkuntalaba.uz/logo.png"> <!-- Replace with a full URL to your logo -->
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://birkuntalaba.uz/"> <!-- Replace with your actual domain -->
+  <meta property="twitter:title" content="Bir Kun Talaba - O'zingizga mos universitetni toping">
+  <meta property="twitter:description" content="Qiziqarli testimizni yeching va o'zingizga mos keladigan universitet va yo'nalishni aniqlang.">
+  <meta property="twitter:image" content="https://birkuntalaba.uz/logo.png"> <!-- Replace with a full URL to your logo -->
+
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
