- seo optimization fix

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Bir Kun Talaba - O'zingizga mos universitetni toping</title>
 
   <!-- SEO Optimization: Meta Tags -->
-  <meta name="description" content="Bir Kun Talaba - bu qiziqarli test orqali O'zbekistondagi universitetlar orasidan sizga eng mosini topishga yordam beradigan platforma. Kelajakdagi kasbingizni biz bilan kashf eting." />
-  <meta name="keywords" content="universitet, talaba, O'zbekiston, ta'lim, kasb tanlash, abituriyent, test, oliygoh" />
+  <meta name="description" content="Bir Kun Talaba - bu O'zbekistondagi universitetlar orasidan sizga eng mosini topishga yordam beradigan platforma. Kelajakdagi kasbingizni biz bilan kashf eting." />
+  <meta name="keywords" content="universitet, talaba, O'zbekiston, ta'lim, kasb tanlash, abituriyent, test, oliygoh, bir kun talaba, one day student" />
   <meta name="author" content="Bir Kun Talaba" />
   <link rel="canonical" href="https://birkuntalaba.uz" /> <!-- Replace with your actual domain -->
 
@@ -18,15 +18,15 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://birkuntalaba.uz/"> <!-- Replace with your actual domain -->
   <meta property="og:title" content="Bir Kun Talaba - O'zingizga mos universitetni toping">
-  <meta property="og:description" content="Qiziqarli testimizni yeching va o'zingizga mos keladigan universitet va yo'nalishni aniqlang.">
-  <meta property="og:image" content="https://birkuntalaba.uz/logo.png"> <!-- Replace with a full URL to your logo -->
+  <meta property="og:description" content="O'zingizga mos keladigan universitet va yo'nalishni aniqlang.">
+  <meta property="og:image" content="https://birkuntalaba.uz/ico.png"> <!-- Replace with a full URL to your logo -->
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://birkuntalaba.uz/"> <!-- Replace with your actual domain -->
   <meta property="twitter:title" content="Bir Kun Talaba - O'zingizga mos universitetni toping">
-  <meta property="twitter:description" content="Qiziqarli testimizni yeching va o'zingizga mos keladigan universitet va yo'nalishni aniqlang.">
-  <meta property="twitter:image" content="https://birkuntalaba.uz/logo.png"> <!-- Replace with a full URL to your logo -->
+  <meta property="twitter:description" content="O'zingizga mos keladigan universitet va yo'nalishni aniqlang.">
+  <meta property="twitter:image" content="https://birkuntalaba.uz/ico.png"> <!-- Replace with a full URL to your logo -->
 
 </head>
 <body>
