--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Bir Kun Talaba - bu O'zbekistondagi universitetlar orasidan sizga eng mosini topishga yordam beradigan platforma. Kelajakdagi kasbingizni biz bilan kashf eting." />
   <meta name="keywords" content="universitet, talaba, O'zbekiston, ta'lim, kasb tanlash, abituriyent, test, oliygoh, bir kun talaba, one day student" />
   <meta name="author" content="Bir Kun Talaba" />
-  <link rel="canonical" href="https://birkuntalaba.uz" /> <!-- Replace with your actual domain -->
+  <link rel="canonical" href="https://www.birkuntalaba.uz" /> <!-- Replace with your actual domain -->
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
