--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uz">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/ico.png" />
+  <link rel="icon" type="image/png+xml" href="/ico.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <!-- SEO Optimization: Default Title -->
