--- a/index.html
+++ b/index.html
@@ -28,9 +28,21 @@
   <meta property="twitter:description" content="O'zingizga mos keladigan universitet va yo'nalishni aniqlang.">
   <meta property="twitter:image" content="https://birkuntalaba.uz/ico.png"> <!-- Replace with a full URL to your logo -->
 
+  <script type="text/javascript">
+    (function(m,e,t,r,i,k,a){
+      m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      m[i].l=1*new Date();
+      for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+      k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+    })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=105221695', 'ym');
+
+    ym(105221695, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
+  </script>
 </head>
 <body>
-<div id="root"></div>
+<div id="root">
+  <noscript><div><img src="https://mc.yandex.ru/watch/105221695" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+</div>
 <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
